[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/fonts/source_serif_pro_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/themes/main.theme" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 0.470588 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.968627, 0.968627, 0.94902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.133333, 0.152941, 0.145098, 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[node name="PauseMenuControl" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransparentBGPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OpaquePanelContainer" type="Panel" parent="TransparentBGPanel"]
anchor_left = 0.352
anchor_top = 0.25
anchor_right = 0.648
anchor_bottom = 0.75
margin_left = -0.560059
margin_right = 0.559998
margin_bottom = -6.10352e-05
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 200, 200 )
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="TransparentBGPanel/OpaquePanelContainer"]
anchor_left = 0.158
anchor_right = 0.842
anchor_bottom = 1.0
margin_left = -0.0399933
margin_top = -1.52588e-05
margin_right = 0.0399475
custom_constants/margin_right = 10
custom_constants/margin_top = 60
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="TransparentBGPanel/OpaquePanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 60.0
margin_right = 249.0
margin_bottom = 399.0
custom_constants/separation = 50

[node name="PausedLabel" type="Label" parent="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer"]
margin_right = 239.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsVBox" type="VBoxContainer" parent="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer"]
margin_top = 101.0
margin_right = 239.0
margin_bottom = 339.0
rect_min_size = Vector2( 100, 75 )
rect_pivot_offset = Vector2( 200, 200 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="Button" parent="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer/ButtonsVBox"]
margin_right = 239.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
focus_neighbour_top = NodePath("../MainMenuBtn")
focus_neighbour_bottom = NodePath("../RestartLevelBtn")
text = "Resume"

[node name="RestartLevelBtn" type="Button" parent="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer/ButtonsVBox"]
margin_top = 75.0
margin_right = 239.0
margin_bottom = 125.0
rect_min_size = Vector2( 150, 50 )
focus_neighbour_top = NodePath("../ResumeBtn")
focus_neighbour_bottom = NodePath("../MainMenuBtn")
text = "Restart Level"

[node name="MainMenuBtn" type="Button" parent="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer/ButtonsVBox"]
margin_top = 150.0
margin_right = 239.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 50 )
focus_neighbour_top = NodePath("../RestartLevelBtn")
focus_neighbour_bottom = NodePath("../ResumeBtn")
text = "Main Menu"
[connection signal="pressed" from="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer/ButtonsVBox/ResumeBtn" to="." method="resume_game"]
[connection signal="pressed" from="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer/ButtonsVBox/RestartLevelBtn" to="." method="restart_level_pressed"]
[connection signal="pressed" from="TransparentBGPanel/OpaquePanelContainer/MarginContainer/VSplitContainer/ButtonsVBox/MainMenuBtn" to="." method="main_menu_pressed"]
